implementing account creation feature

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -12,7 +12,7 @@
 
     <div id="dashboard"></div>
 
-    
+    <script src="js/auth-check.js"></script>
     <script src="js/main.js" defer></script>
   </body>
 </html>
