--- a/client/matchup.html
+++ b/client/matchup.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <script src="js/auth-check.js"></script>
     <div style="padding: 20px;">
       <a href="index.html" style="color: #3b82f6; text-decoration: none; font-weight: bold;">&larr; Back to Dashboard</a>
       <h2>Predict Matchup Winrate</h2>
