--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>LOLSpect</title>
-
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
-
   <body>
-    <div id="header"></div>
-
+    <div id="header-placeholder"></div>
+    <script>
+      fetch('partials/header.html')
+        .then(r=>r.text()).then(html=>{
+          document.querySelector('#header-placeholder').innerHTML = html;
+          const s = document.createElement('script');
+          s.src = 'js/header.js'; s.defer = true;
+          s.onload = ()=> initializeHeader();
+          document.head.appendChild(s);
+        });
+    </script>
     <div id="dashboard"></div>
-
-    
-    <script src="js/main.js" defer></script>
+    <script src="/js/main.js" defer></script>
   </body>
 </html>
